fixed nav disalignment

--- a/src/components/Nav/styles.css
+++ b/src/components/Nav/styles.css
@@ -19,11 +19,7 @@
 }
 
 .navContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
   max-width: 700px;
-  margin: 0px auto;
 }
 
 .navContainer ul {
@@ -31,6 +27,7 @@
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
+  padding: 0px;
 }
 
 .navContainer li {
@@ -43,8 +40,8 @@
   font-style: normal;
 
   list-style-type: none;
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-left: 10px;
+  margin-right: 10px;
   padding-top: 10px;
 }
 
